--- a/SmartLibrary/Views/Pages/Borrow_Return_Book.xaml
+++ b/SmartLibrary/Views/Pages/Borrow_Return_Book.xaml
@@ -7,7 +7,7 @@
     xmlns:extensions="clr-namespace:SmartLibrary.Extensions"
     xmlns:local="clr-namespace:SmartLibrary.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" 
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="Borrow_Return_Book"
     d:DataContext="{d:DesignInstance local:Borrow_Return_Book,
                                      IsDesignTimeCreatable=False}"
@@ -408,7 +408,7 @@
                                     <ui:TextBlock
                                         Grid.Column="0"
                                         FontSize="24"
-                                        Text="字数：" />
+                                        Text="关键词：" />
                                     <ui:TextBox
                                         Grid.Column="1"
                                         BorderThickness="0"
