--- a/SmartLibrary/Views/Pages/Settings.xaml
+++ b/SmartLibrary/Views/Pages/Settings.xaml
@@ -494,11 +494,14 @@
                                 Text="填写您的ISBN查询API秘钥" />
                         </StackPanel>
                     </ui:CardControl.Header>
-                    <ui:TextBox
+                    <ui:PasswordBox
                         MinWidth="220"
-                        Margin="0,0,8,0"
-                        PreviewKeyDown="IsbnBox_PreviewKeyDown"
-                        Text="{Binding ViewModel.ApiKey, Mode=TwoWay}" />
+                        MaxWidth="450"
+                        Margin="0,0,4,0"
+                        MaxLength="48"
+                        Password="{Binding ViewModel.ApiKey, Mode=TwoWay}"
+                        PreviewKeyDown="TextBox_PreviewKeyDown"
+                        Text="{Binding ViewModel.ApiKeyText, Mode=TwoWay}" />
                 </ui:CardControl>
                 <ui:TextBlock
                     Margin="0,12,0,0"
