--- a/SmartLibrary/Views/Pages/Settings.xaml
+++ b/SmartLibrary/Views/Pages/Settings.xaml
@@ -5,6 +5,7 @@
     xmlns:converters="clr-namespace:SmartLibrary.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:extensions="clr-namespace:SmartLibrary.Extensions"
+    xmlns:input="clr-namespace:System.Windows.Input;assembly=PresentationCore"
     xmlns:local="clr-namespace:SmartLibrary.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
@@ -496,8 +497,8 @@
                     </ui:CardControl.Header>
                     <ui:PasswordBox
                         MinWidth="220"
-                        MaxWidth="450"
                         Margin="0,0,4,0"
+                        input:InputMethod.IsInputMethodEnabled="False"
                         MaxLength="48"
                         Password="{Binding ViewModel.ApiKey, Mode=TwoWay}"
                         PreviewKeyDown="TextBox_PreviewKeyDown"
