--- a/SmartManager/Views/Pages/Settings.xaml
+++ b/SmartManager/Views/Pages/Settings.xaml
@@ -1,24 +1,24 @@
 ﻿<Page
-    x:Class="SmartLibrary.Views.Pages.Settings"
+    x:Class="SamrtManager.Views.Pages.Settings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:Shared.Converters;assembly=Shared"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:extensions="clr-namespace:Shared.Extensions;assembly=Shared"
-    xmlns:input="clr-namespace:System.Windows.Input;assembly=PresentationCore"
-    xmlns:local="clr-namespace:SmartLibrary.Views.Pages"
+    xmlns:local="clr-namespace:SamrtManager.Views.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="Settings"
     d:DataContext="{d:DesignInstance local:Settings,
                                      IsDesignTimeCreatable=False}"
-    d:DesignHeight="950"
-    d:DesignWidth="800"
+    d:DesignHeight="630"
+    d:DesignWidth="900"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
+
     <Page.Resources>
         <converters:IsCustomizedAccentColorConverter x:Key="IsCustomizedAccentColorConverter" />
         <converters:StringToBrushConverter x:Key="StringToBrushConverter" />
@@ -52,239 +52,11 @@
     </Page.Resources>
 
     <Grid Margin="16,16,4,16">
-        <TextBox Name="XuNiBox" Width="0" />
         <ScrollViewer
             extensions:ScrollAnimationBehavior.IsEnabled="True"
             extensions:ScrollAnimationBehavior.PointsToScroll="16"
             extensions:ScrollAnimationBehavior.TimeDuration="00:00:00.20">
             <StackPanel MaxWidth="1180" Margin="0,0,12,0">
-                <ui:TextBlock FontTypography="Subtitle" Text="通用设置" />
-                <ui:CardControl Margin="0,8,0,0" Icon="{ui:SymbolIcon Laptop24}">
-                    <ui:CardControl.Header>
-                        <StackPanel>
-                            <ui:TextBlock FontSize="16" Text="开机自启动" />
-                            <ui:TextBlock
-                                FontSize="13"
-                                Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                Text="系统启动时程序自动运行" />
-                        </StackPanel>
-                    </ui:CardControl.Header>
-                    <ui:ToggleSwitch
-                        Margin="0,0,8,0"
-                        IsChecked="{Binding ViewModel.AutoStart, Mode=TwoWay}"
-                        OffContent="关"
-                        OnContent="开" />
-                </ui:CardControl>
-                <ui:CardControl Margin="0,4,0,0" Icon="{ui:SymbolIcon PhoneDesktop28}">
-                    <ui:CardControl.Header>
-                        <StackPanel>
-                            <ui:TextBlock FontSize="16" Text="启动时最小化到托盘" />
-                            <ui:TextBlock
-                                FontSize="13"
-                                Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                Text="设置后程序启动时不再主动显示主窗口" />
-                        </StackPanel>
-                    </ui:CardControl.Header>
-                    <ui:ToggleSwitch
-                        Margin="0,0,8,0"
-                        IsChecked="{Binding ViewModel.AutoStartMinimized, Mode=TwoWay}"
-                        OffContent="关"
-                        OnContent="开" />
-                </ui:CardControl>
-                <ui:CardControl Margin="0,4,0,0" Icon="{ui:SymbolIcon Options24}">
-                    <ui:CardControl.Header>
-                        <StackPanel>
-                            <ui:TextBlock FontSize="16" Text="启用托盘图标" />
-                            <ui:TextBlock
-                                FontSize="13"
-                                Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                Text="禁用此选项时关闭窗口将直接退出程序" />
-                        </StackPanel>
-                    </ui:CardControl.Header>
-                    <ui:ToggleSwitch
-                        Margin="0,0,8,0"
-                        IsChecked="{Binding ViewModel.TrayEnabled, Mode=TwoWay}"
-                        OffContent="关"
-                        OnContent="开" />
-                </ui:CardControl>
-                <ui:CardControl Margin="0,4,0,0" Icon="{ui:SymbolIcon ArrowSync24}">
-                    <ui:CardControl.Header>
-                        <StackPanel>
-                            <ui:TextBlock FontSize="16" Text="自动检查更新" />
-                            <ui:TextBlock
-                                FontSize="13"
-                                Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                Text="程序将在每次启动时检查是否有更新" />
-                        </StackPanel>
-                    </ui:CardControl.Header>
-                    <ui:ToggleSwitch
-                        Margin="0,0,8,0"
-                        IsChecked="{Binding ViewModel.AutoCheckUpdate, Mode=TwoWay}"
-                        OffContent="关"
-                        OnContent="开" />
-                </ui:CardControl>
-                <ui:CardExpander
-                    Margin="0,4,0,0"
-                    ContentPadding="0"
-                    Expanded="FileOccupancyExpander_Expanded"
-                    Icon="{ui:SymbolIcon DataPie24}"
-                    IsExpanded="{Binding ViewModel.IsFileOccupancyExpanded, Mode=TwoWay}">
-                    <ui:CardExpander.Header>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <StackPanel Grid.Column="0">
-                                <ui:TextBlock FontSize="16" Text="存储空间" />
-                                <ui:TextBlock
-                                    FontSize="13"
-                                    Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                    Text="查看程序详细存储空间占用" />
-                            </StackPanel>
-                            <ui:Button
-                                Grid.Column="1"
-                                Margin="0,0,24,0"
-                                BorderThickness="0"
-                                Click="AppFolderButton_Click"
-                                Content="打开 App 文件夹" />
-                        </Grid>
-                    </ui:CardExpander.Header>
-                    <StackPanel>
-                        <ui:Button
-                            Padding="16"
-                            HorizontalAlignment="Stretch"
-                            HorizontalContentAlignment="Stretch"
-                            Background="Transparent"
-                            BorderThickness="0"
-                            Click="BooksDataButton_Click"
-                            CornerRadius="0">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    Grid.Column="0"
-                                    Margin="8,0,0,0"
-                                    FontSize="16"
-                                    Text="图书数据库" />
-                                <TextBlock
-                                    Margin="0,0,8,0"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Center"
-                                    FontSize="13"
-                                    Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                    Text="{Binding ViewModel.DataCount, Mode=OneWay}" />
-                                <ui:SymbolIcon
-                                    Grid.Column="2"
-                                    Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                    Symbol="Open24" />
-                            </Grid>
-                        </ui:Button>
-                        <ui:Button
-                            Padding="16"
-                            HorizontalAlignment="Stretch"
-                            HorizontalContentAlignment="Stretch"
-                            Background="Transparent"
-                            BorderThickness="0,1,0,0"
-                            Click="PictureCacheButton_Click"
-                            CornerRadius="0">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    Grid.Column="0"
-                                    Margin="8,0,0,0"
-                                    FontSize="16"
-                                    Text="图书图片缓存" />
-                                <TextBlock
-                                    Margin="0,0,8,0"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Center"
-                                    FontSize="13"
-                                    Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                    Text="{Binding ViewModel.PictureCacheCount, Mode=OneWay}" />
-                                <ui:SymbolIcon
-                                    Grid.Column="2"
-                                    Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                    Symbol="Open24" />
-                            </Grid>
-                        </ui:Button>
-                        <ui:Button
-                            Padding="16"
-                            HorizontalAlignment="Stretch"
-                            HorizontalContentAlignment="Stretch"
-                            Background="Transparent"
-                            BorderThickness="0,1,0,1"
-                            Click="TempButton_Click"
-                            CornerRadius="0">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    Grid.Column="0"
-                                    Margin="8,0,0,0"
-                                    FontSize="16"
-                                    Text="临时数据" />
-                                <TextBlock
-                                    Margin="0,0,8,0"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Center"
-                                    FontSize="13"
-                                    Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                    Text="{Binding ViewModel.TempCount, Mode=OneWay}" />
-                                <ui:SymbolIcon
-                                    Grid.Column="2"
-                                    Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                    Symbol="Open24" />
-                            </Grid>
-                        </ui:Button>
-                        <ui:Card Background="{StaticResource SystemFillColorCriticalBackgroundBrush}" BorderThickness="0">
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
-                                </Grid.ColumnDefinitions>
-                                <ui:TextBlock
-                                    Grid.Column="0"
-                                    Margin="8,0,0,0"
-                                    VerticalAlignment="Center"
-                                    FontSize="16"
-                                    Text="危险操作" />
-                                <StackPanel Grid.Column="1" Orientation="Horizontal">
-                                    <ui:Button
-                                        Width="108"
-                                        BorderThickness="0"
-                                        Command="{Binding ViewModel.CleanFileOccupancyButtonClickCommand}"
-                                        CommandParameter="CleanDatabase"
-                                        Content="重置数据库"
-                                        IsEnabled="{Binding ViewModel.IsCleanDatabaseEnabled, Mode=OneWay}" />
-                                    <ui:Button
-                                        Margin="12,0,12,0"
-                                        BorderThickness="0"
-                                        Command="{Binding ViewModel.CleanFileOccupancyButtonClickCommand}"
-                                        CommandParameter="CleanPictureCache"
-                                        Content="清除图片缓存"
-                                        IsEnabled="{Binding ViewModel.IsCleanPictureCacheEnabled, Mode=OneWay}" />
-                                    <ui:Button
-                                        BorderThickness="0"
-                                        Command="{Binding ViewModel.CleanFileOccupancyButtonClickCommand}"
-                                        CommandParameter="CleanTemp"
-                                        Content="清除临时数据"
-                                        IsEnabled="{Binding ViewModel.IsCleanTempEnabled, Mode=OneWay}" />
-                                </StackPanel>
-                            </Grid>
-                        </ui:Card>
-                    </StackPanel>
-                </ui:CardExpander>
                 <ui:TextBlock
                     Margin="0,12,0,0"
                     FontTypography="Subtitle"
@@ -504,48 +276,6 @@
                 <ui:TextBlock
                     Margin="0,12,0,0"
                     FontTypography="Subtitle"
-                    Text="高级设置" />
-                <ui:CardControl Margin="0,8,0,0" Icon="{ui:SymbolIcon Crown20}">
-                    <ui:CardControl.Header>
-                        <StackPanel>
-                            <ui:TextBlock FontSize="16" Text="管理员模式" />
-                            <ui:TextBlock
-                                FontSize="13"
-                                Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                Text="获取管理员权限以进行书籍添加、删除等操作" />
-                        </StackPanel>
-                    </ui:CardControl.Header>
-                    <ui:ToggleSwitch
-                        Margin="0,0,8,0"
-                        IsChecked="{Binding ViewModel.IsAdministrator, Mode=TwoWay}"
-                        OffContent="关"
-                        OnContent="开" />
-                </ui:CardControl>
-                <ui:CardControl
-                    Margin="0,4,0,0"
-                    Icon="{ui:SymbolIcon KeyMultiple20}"
-                    Visibility="{Binding ViewModel.IsAdministrator, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
-                    <ui:CardControl.Header>
-                        <StackPanel>
-                            <ui:TextBlock FontSize="16" Text="API Key" />
-                            <ui:TextBlock
-                                FontSize="13"
-                                Foreground="{StaticResource TextFillColorSecondaryBrush}"
-                                Text="填写您的ISBN查询API秘钥" />
-                        </StackPanel>
-                    </ui:CardControl.Header>
-                    <ui:PasswordBox
-                        MinWidth="220"
-                        Margin="0,0,4,0"
-                        input:InputMethod.IsInputMethodEnabled="False"
-                        MaxLength="48"
-                        Password="{Binding ViewModel.ApiKey, Mode=TwoWay}"
-                        PreviewKeyDown="TextBox_PreviewKeyDown"
-                        Text="{Binding ViewModel.ApiKeyText, Mode=TwoWay}" />
-                </ui:CardControl>
-                <ui:TextBlock
-                    Margin="0,12,0,0"
-                    FontTypography="Subtitle"
                     Text="关于" />
                 <ui:CardExpander Margin="0,8,0,0" ContentPadding="0">
                     <ui:CardExpander.Icon>
@@ -566,7 +296,7 @@
                                 <TextBox
                                     FontSize="16"
                                     Style="{StaticResource SelectableTextBlockStyle}"
-                                    Text="智慧图书馆" />
+                                    Text="智慧管理员" />
                                 <TextBox
                                     FontSize="13"
                                     Foreground="{StaticResource TextFillColorSecondaryBrush}"
